fix(blocks.scss): add `margin-inline: auto` to `.btn` to center align button on the base breakpoint, then remove the auto inline margin on the 768px and beyond breakpoints

--- a/src/sass/components/_blocks.scss
+++ b/src/sass/components/_blocks.scss
@@ -30,6 +30,10 @@
             font-size: var(--fs-500);
             line-height: 1.5;
         }
+
+        .btn {
+            margin-inline: auto;
+        }
     }
 }
 
@@ -39,6 +43,10 @@
 
         &-content {
             text-align: left;
+
+            .btn {
+                margin-inline: unset;
+            }
         }
     }
 }
